# LO-PHI

./: .gitignore  .gitmodules  README.md  build_debs.sh  build_qemu.sh  install_all_packages.sh  install_developer_dependencies.sh  release_debs.sh  setup_dev_environment.sh
experiments/: README.md
lophi-analysis/: README.md
lophi-analysis-1.0/: setup.py
lophi-automation/: install_dependencies.sh  setup.py
lophi-automation-1.0/: README.md  setup.py
lophi-disk-introspection-server/: Makefile.am  Makefile.in  setup_env.sh
lophi-disk-introspection-server-1.0/: Makefile.in  config.h.in  configure  configure.ac  configure.ac-old  disk_introspection_server.h
lophi-disk-introspection-server-1.0/debian/: README.Debian  changelog  control  emacsen-install.ex  emacsen-remove.ex  lophi-disk-introspection-server.cron.d.ex  manpage.1.ex  manpage.xml.ex  menu.ex  postrm.ex  prerm.ex
lophi-disk-introspection-server-1.0/src/: Makefile.am  Makefile.in  dis_client.c  dis_logger.c  dis_threads.c  disk_introspection_server.c
lophi-disk-introspection-server-1.0/tools/: Makefile.am  Makefile.in  disk_introspection_status.c
lophi-net-services/: setup.py
lophi-net-services-1.0/: README.md  net_services_setup.sh  setup.py
python-lophi/: README.md  setup.py
python-lophi-1.0/: setup.py
python-lophi-semanticgap/: setup.py
python-lophi-semanticgap-1.0/: README.md  setup.py
python-lophi-volatility/: setup.py  setup_volatility.sh
python-lophi-volatility-1.0/: README.md  setup.py  setup_volatility.sh
qemu-2.0.0+dfsg_patch/: Makefile.objs.patch  Makefile.target.patch  (+10 more)
(+400 files in other folders)
